# aiocamedomotic

./: .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_MANUAL.md  API_reference.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.rst  ROADMAP.md  SECURITY.md  llms-full.txt  llms.md  llms.txt  pyproject.toml  sonar-project.properties
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: build-TEMPORARY.yml  build-llms-docs.yml  build-publish.yml  claude.yml  code-quality.yml  code-tests.yml  dependabot-auto-merge.yml  docs.yml  release_drafter.yml  repository-maintenance.yml  security.yml  workflow-tests.yml
aiocamedomotic/: __init__.py  anonymizer.py  auth.py  came_domotic_api.py  const.py  errors.py  utils.py
aiocamedomotic/models/: __init__.py  analog_in.py  base.py  camera.py  digital_input.py  energy_meter.py  irrigation.py  light.py  loads_ctrl.py  map_page.py  opening.py  profiles.py  relay.py  scenario.py  sound_zone.py  thermo_zone.py  timer.py  update.py
came_domotic_unofficial/: __init__.py
came_domotic_unofficial/models/: __init__.py  base.py
docs/: Makefile  make.bat
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst  requirements.in  requirements.txt  usage_examples.rst
scripts/: build_llms_docs.py
tests/aiocamedomotic/:  __init__.py  conftest.py  const.py  mocked_requests.py  mocked_responses.py  test_anonymizer.py  test_auth.py  test_came_domotic_api.py  test_config.ini.example  test_const.py  test_energy_meter.py  test_errors.py  test_init.py  test_irrigation.py  test_loads_ctrl.py  test_map_page.py  test_models.py  test_profiles.py  test_real.py  test_sound_zone.py  test_timer.py  test_utils.py
tests/came_domotic_unofficial/: const.py  mocked_responses.py  test_auth.py  test_came_domotic_api.py  test_models.py  test_real.py
