# Copyright 2024 - GitHub user: fredericks1982

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "aiocamedomotic"
version = "1.1.1"
description = "Python library to interact with a CAME ETI/Domo domotic server."
license = "Apache-2.0"
authors = ["camedomotic-unofficial <camedomotic-unofficial@gmail.com>"]
maintainers = ["camedomotic-unofficial <camedomotic-unofficial@gmail.com>"]
readme = "README.rst"

homepage = "https://github.com/camedomotic-unofficial/aiocamedomotic"
repository = "https://github.com/camedomotic-unofficial/aiocamedomotic.git"
documentation = "https://aiocamedomotic.readthedocs.io/latest/index.html"

keywords = [
    "CAME",
    "ETI/Domo",
    "domotic",
    "home automation",
    "home assistant",
    "home-assistant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

packages = [{ include = "aiocamedomotic" }]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/camedomotic-unofficial/aiocamedomotic/issues"

[tool.poetry.dependencies]
python = '^3.12'
aiohttp = '^3.13.3'
requests = '^2.32.5'
cryptography = '>=44.0.2,<47.0.0'

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
cryptography = '>=44.0.2,<47.0.0'
freezegun = '^1.5.5'
hypothesis = '^6.151.5'
pytest = '>=8.3.4,<10.0.0'
pytest-cov = '>=5,<8'
pytest-timeout = '^2.4.0'
pytest-asyncio = '>=0.23.6,<2.0.0'

[tool.poetry.group.code-quality]
optional = true

[tool.poetry.group.code-quality.dependencies]
black = '>=24.3,<27.0'
pylint = '>=3.3.4,<5.0.0'
mypy = '^1.19.1'
types-requests = '^2.32.4'

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2.6,<10.0.0"
sphinx_rtd_theme = ">=2,<4"
readthedocs-sphinx-search = "^0.3.2"
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--timeout=10 -s" # -s to show print() output in the tests log
# addopts = "--timeout=10 --cov=aiocamedomotic --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "aiocamedomotic/_version.py", # Ignore: it is autogenerated by setuptools_scm
]
